kubernetes/databases/tandoor/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-operator
  namespace: tandoor
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: tandoor-postgresql
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
  policyTypes:
    - Ingress
